# brain-rs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  OUTLINE.md  README.md  config.toml
crates/brain_core/: Cargo.toml
crates/brain_core/src/: config.rs  lib.rs  llm.rs  pipeline.rs  thought.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tui/: .envrc  Cargo.toml  LICENSE  README.md
crates/tui/.github/workflows/: cd.yml
crates/tui/src/: app.rs  components.rs  main.rs  tui.rs
crates/tui/src/components/: fps.rs  home.rs
