[workspace]
members = [
    "crates/brain_core",
    "crates/memory",
    "crates/tools",
    "crates/tui",
]
resolver = "2"
default-members = ["crates/tui"]

[workspace.dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
rand = "0.8.5"
serde_json = "1.0"
thiserror = "1.0.48"

[workspace.dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.32.0"
features = ["full"]

[workspace.dependencies.uuid]
version = "1.4.1"
features = [
    "v4",
    "serde",
]
