[package]
name = "brain_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

# Local crates
memory = { path = "../memory" }
tools = { path = "../tools" }

# External dependencies
anthropic-sdk = "0.1.5"
toml = "0.5.11"